2024-02-20T16:01:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7976364820 # 134
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
* notice: last 14d: unq all: 52 104
* notice: prev accum: outdated-unq outdated-all / unq all: 1740 3821 / 1789 3891
* notice: next accum: outdated-unq outdated-all / unq all: 1740 3821 / 1806 3926
* notice: prev exec diff / last date diff / accum: unq all: +17 +35 -0 -0 / +31 +58 -0 -0 / 31 58
* notice: removed / changed dates: [] / [2024-02-20]

2024-02-20T08:07:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7970249371 # 133
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
* notice: last 14d: unq all: 38 69
* notice: prev accum: outdated-unq outdated-all / unq all: 1740 3821 / 1775 3868
* notice: next accum: outdated-unq outdated-all / unq all: 1740 3821 / 1789 3891
* notice: prev exec diff / last date diff / accum: unq all: +14 +23 -0 -1 / +14 +23 -0 -0 / 14 23
* notice: removed / changed dates: [] / [2024-02-06 2024-02-20]

2024-02-19T16:01:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7962283988 # 131
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 27 47
* notice: prev accum: outdated-unq outdated-all / unq all: 1738 3818 / 1766 3857
* notice: next accum: outdated-unq outdated-all / unq all: 1740 3821 / 1775 3868
* notice: prev exec diff / last date diff / accum: unq all: +9 +11 -0 -0 / +9 +11 -0 -0 / 9 11
* notice: removed / changed dates: [2024-02-05] / [2024-02-19]

2024-02-18T16:01:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7950133942 # 128