@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-07T16:01:28Z",
-  "count" : 2,
+  "timestamp" : "2024-02-21T00:25:18Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
