@@ -1,15 +1,10 @@
 {
-  "count": 104,
-  "uniques": 52,
+  "count": 95,
+  "uniques": 49,
   "clones": [
     {
-      "timestamp": "2024-02-06T00:00:00Z",
-      "count": 8,
-      "uniques": 7
-    },
-    {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
